1.2.2  March 12, 2012
  - Better implementation for UTF8 length determination

1.2.1  March 12, 2012
  - Correctly calculate Content-Length for UTF8 strings

1.2.0  March 10, 2012
  - New post_form() function supporting signed fileuploads
  - Send appropriate user-agent with requests

1.1.1  March 5, 2012
  - Make sure the Content-Length header is sent for POSTs

1.1.0  March 5, 2012
  - Better error handling
  - Handle requests with no parameters specified
  - Add login_url() example

1.0.0  January 16, 2012
  - Initial public release