@@ -133,6 +133,9 @@ var _handle_response = function(cb) {
                 if (data.system_error && !data.error) {
                     data.error = data.system_error;
                 }
+                if (typeof data.error === 'undefined') {
+                    data.error = null;
+                }
                 if (cb) { cb(data.error, data); }
             }
         });
@@ -240,6 +243,9 @@ api.post_form = function(method, params, cb) {
         }
         if (data.system_error && !data.error) {
             data.error = data.system_error;
+        }
+        if (typeof data.error === 'undefined') {
+            data.error = null;
         }
         if (cb) { cb(data.error, data); }
     });
