@@ -1,3 +1,5 @@
+  - Make errors be null again instead of undefined
+
 1.2.2  March 12, 2012
   - Better implementation for UTF8 length determination
 
